--- a/product-preview-card-component-main/css/style.css
+++ b/product-preview-card-component-main/css/style.css
@@ -13,7 +13,7 @@ body {
   color: #777777;
   background-color: #fff;
   border-radius: 0.75em;
-  width: min(90%, 550px);
+  width: min(90%, 575px);
   font-family: "Montserrat", sans-serif;
   margin: 2em auto;
 }
@@ -32,6 +32,8 @@ body {
 .card__category {
   text-transform: uppercase;
   font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 3px;
 }
 
 .card_title,
