--- a/interactive-rating-component-main/css/main.css
+++ b/interactive-rating-component-main/css/main.css
@@ -550,9 +550,9 @@ video {
   width: 100%;
 }
 
-@media (min-width: 26.5em){
+@media (min-width: 20em){
   .container{
-    max-width: 26.5em;
+    max-width: 20em;
   }
 }
 
@@ -711,6 +711,15 @@ video {
   clear: none;
 }
 
+.m-auto{
+  margin: auto;
+}
+
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -718,6 +727,14 @@ video {
 
 .my-6{
   margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mb-6{
   margin-bottom: 1.5rem;
 }
 
@@ -733,12 +750,8 @@ video {
   margin-top: 1rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .box-border{
@@ -840,36 +853,28 @@ video {
   display: none;
 }
 
-.h-4{
-  height: 1rem;
-}
-
-.h-6{
-  height: 1.5rem;
-}
-
-.h-5{
-  height: 1.25rem;
-}
-
-.h-8{
-  height: 2rem;
-}
-
 .h-10{
   height: 2.5rem;
 }
 
-.h-12{
-  height: 3rem;
+.h-4{
+  height: 1rem;
 }
 
 .h-full{
   height: 100%;
 }
 
+.w-10{
+  width: 2.5rem;
+}
+
 .w-11\/12{
   width: 91.666667%;
+}
+
+.w-4{
+  width: 1rem;
 }
 
 .w-\[this-is\\\\\]{
@@ -884,37 +889,13 @@ video {
   width: weird-and-invalid;
 }
 
-.w-full{
-  width: 100%;
-}
-
 .w-fit{
   width: -moz-fit-content;
   width: fit-content;
 }
 
-.w-4{
-  width: 1rem;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
-.w-5{
-  width: 1.25rem;
-}
-
-.w-8{
-  width: 2rem;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-12{
-  width: 3rem;
+.w-full{
+  width: 100%;
 }
 
 .flex-shrink{
@@ -1439,8 +1420,8 @@ video {
   justify-items: stretch;
 }
 
-.gap-6{
-  gap: 1.5rem;
+.gap-4{
+  gap: 1rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
@@ -3056,19 +3037,9 @@ video {
   border-color: rgb(32 39 49 / 0.95);
 }
 
-.border-red-900{
+.border-red-800{
   --tw-border-opacity: 1;
-  border-color: rgb(127 29 29 / var(--tw-border-opacity));
-}
-
-.border-red-600{
-  --tw-border-opacity: 1;
-  border-color: rgb(220 38 38 / var(--tw-border-opacity));
-}
-
-.border-green-900{
-  --tw-border-opacity: 1;
-  border-color: rgb(20 83 45 / var(--tw-border-opacity));
+  border-color: rgb(153 27 27 / var(--tw-border-opacity));
 }
 
 .border-b-white{
@@ -4357,16 +4328,26 @@ video {
   padding: 0.5rem;
 }
 
-.p-4{
-  padding: 1rem;
-}
-
-.p-8{
-  padding: 2rem;
+.p-2\.5{
+  padding: 0.625rem;
 }
 
 .p-3{
   padding: 0.75rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pb-4{
@@ -4438,14 +4419,19 @@ video {
   line-height: 2rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-bold{
@@ -5691,6 +5677,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-opacity-80{
+  --tw-text-opacity: 0.8;
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -5991,6 +5981,16 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-colors{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-150{
+  transition-duration: 150ms;
+}
+
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
@@ -6016,14 +6016,18 @@ video {
   forced-color-adjust: none;
 }
 
+.left-9999{
+  left: -9999px;
+}
+
 @media (min-width: 40em){
   .sm\:container{
     width: 100%;
   }
 
-  @media (min-width: 26.5em){
+  @media (min-width: 20em){
     .sm\:container{
-      max-width: 26.5em;
+      max-width: 20em;
     }
   }
 
@@ -6057,18 +6061,23 @@ video {
   background-color: hsl(25 97% 53% / var(--tw-bg-opacity));
 }
 
-.checked\:text-white:checked{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .hover\:bg-gray-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(132 139 149 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .hover\:font-bold:hover{
   font-weight: 700;
+}
+
+.hover\:text-accent:hover{
+  --tw-text-opacity: 1;
+  color: hsl(25 97% 53% / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover{
@@ -6104,9 +6113,65 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media (min-width: 20em){
+  .xs\:w-\[300px\]{
+    width: 300px;
+  }
+
+  .xs\:p-5{
+    padding: 1.25rem;
+  }
+}
+
 @media (min-width: 40em){
+  .sm\:h-12{
+    height: 3rem;
+  }
+
+  .sm\:w-12{
+    width: 3rem;
+  }
+
+  .sm\:w-5{
+    width: 1.25rem;
+  }
+
   .sm\:w-\[400px\]{
     width: 400px;
+  }
+
+  .sm\:w-\[350px\]{
+    width: 350px;
+  }
+
+  .sm\:w-\[380px\]{
+    width: 380px;
+  }
+
+  .sm\:w-\[360px\]{
+    width: 360px;
+  }
+
+  .sm\:w-\[370px\]{
+    width: 370px;
+  }
+
+  .sm\:gap-6{
+    gap: 1.5rem;
+  }
+
+  .sm\:p-4{
+    padding: 1rem;
+  }
+
+  .sm\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .sm\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .sm\:underline{
@@ -6114,25 +6179,78 @@ video {
   }
 }
 
-@media (min-width: 90em){
-  .xxl\:fixed{
+@media (min-width: 48em){
+  .md\:fixed{
     position: fixed;
   }
 
-  .xxl\:bottom-0{
+  .md\:bottom-0{
     bottom: 0px;
   }
 
-  .xxl\:m-auto{
-    margin: auto;
+  .md\:flex{
+    display: flex;
   }
 
-  .xxl\:min-h-screen{
+  .md\:min-h-screen{
     min-height: 100vh;
   }
 
-  .xxl\:w-full{
+  .md\:w-full{
     width: 100%;
+  }
+
+  .md\:items-center{
+    align-items: center;
+  }
+
+  .md\:justify-center{
+    justify-content: center;
+  }
+}
+
+@media (min-width: 64em){
+  .lg\:my-0{
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .lg\:flex{
+    display: flex;
+  }
+
+  .lg\:min-h-screen{
+    min-height: 100vh;
+  }
+
+  .lg\:w-\[400px\]{
+    width: 400px;
+  }
+
+  .lg\:w-\[390px\]{
+    width: 390px;
+  }
+
+  .lg\:w-\[380px\]{
+    width: 380px;
+  }
+
+  .lg\:items-center{
+    align-items: center;
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
+  }
+
+  .lg\:p-8{
+    padding: 2rem;
+  }
+}
+
+@media (min-width: 90em){
+  .xxl\:min-h-screen{
+    min-height: 100vh;
   }
 }
 
